Working on client

--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Photorepo</title>
+		<script src="script.js"></script>
 	</head>
 	<body>
 		<!--  SINGLE FILE -->
@@ -17,5 +18,9 @@
 			Select images: <input type="file" name="files" multiple />
 			<input type="submit" value="Upload your files" />
 		</form>
+
+		<div>
+			<div id="gallery"></div>
+		</div>
 	</body>
 </html>
